syntax = "proto3";

package pb;
option go_package = "github.com/dnr/styx/pb";

message BuildRoot {
  BuildRootMeta meta = 10;
  // store path hash as nix32 (base of .narinfo file in nix cache)
  repeated string store_path_hash = 5;
  // manifest cache key
  repeated string manifest = 6;
}

message BuildRootMeta {
  int64 build_time = 1;
  string nix_rel_id = 2;         // for ci build
  string styx_commit = 3;        // for ci build
  string charon_build = 4;       // for build of charon itself
  string manifest_upstream = 5;  // for on-demand manifest
  string manifest_sph = 6;       // for on-demand manifest
}
